fix nav styles on mobile

--- a/frontend/src/components/NavBar/_navBar.scss
+++ b/frontend/src/components/NavBar/_navBar.scss
@@ -60,6 +60,11 @@
     padding-left: 40px;
     transition: 0.3s ease-in;
   }
+
+  @include media-breakpoint-down(sm) {
+    width: 100vw;
+    right: -100vw;
+  }
 }
 
 .nav__list--active {
@@ -68,7 +73,7 @@
   right: 0;
 }
 
-.nav__list--active
+
 .nav__menu-mobile {
   display: none;
 
@@ -83,32 +88,33 @@
   display: flex;
   align-items: center;
 
-  &:hover {
-    .nav__link {
-      color: $yellow;
-    }
 
-    .nav__dropdown {
-      visibility: visible;
-      opacity: 1;
+  @include media-breakpoint-up(xl) {
+    &:hover {
+      .nav__link {
+        color: $yellow;
+      }
+
+      .nav__dropdown {
+        visibility: visible;
+        opacity: 1;
+      }
     }
   }
 
 
   @include media-breakpoint-down(lg) {
     margin-bottom: 15px;
+    flex-direction: column;
+    align-items: flex-start;
 
     &:hover {
       .nav__link {
         color: $blue-dark2;
       }
-
-      .nav__dropdown {
-        visibility: hidden;
-        opacity: 0;
-      }
     }
   }
+
 }
 
 .nav__link {
@@ -148,11 +154,31 @@
   transition: 0.3s ease;
 
   @include media-breakpoint-down(lg) {
+    visibility: hidden;
+    opacity: 0;
     position: relative;
-    width: 100%;
+    border-radius: 0;
+    background: none;
+    padding: 0;
     top: unset;
+    margin: unset;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    max-width: 100%;
+    width: 100%;
+    left: unset;
+    box-shadow: none;
+    transition: 0.3s ease;
     height: 0;
+    text-align: left;
   }
+}
+
+.nav__dropdown--mobile {
+  height: 100%;
+  visibility: visible;
+  opacity: 1;
 }
 
 .nav__dropdown-item {
@@ -161,6 +187,16 @@
 
   &:last-of-type {
     margin-right: 0;
+  }
+
+  @include media-breakpoint-down(lg) {
+    width: 100%;
+    margin-right: 0;
+    padding: 5px 0 5px 20px;
+
+    &:first-of-type {
+      padding-top: 15px;
+    }
   }
 }
 
@@ -225,6 +261,10 @@
     transform: scaleY(0);
     transition: all 0.3s ease-out 0s;
   }
+
+  @include media-breakpoint-down(lg) {
+    display: none;
+  }
 }
 
 .nav__dropdown-img-layer {
@@ -255,6 +295,10 @@
   font-size: 16px;
   font-weight: 500;
   transition: 0.3s ease;
+
+  @include media-breakpoint-down(lg) {
+    color: $blue-light;
+  }
 }
 
 .nav__controls {
@@ -350,4 +394,16 @@
     }
   }
 
+}
+
+
+.nav__mobile-close {
+  position: absolute;
+  top: 40px;
+  right: 30px;
+
+  button {
+    font-size: 30px;
+    color: $blue-dark2;
+  }
 }
